--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="input_here">пишите сюда</string>
+    <string name="settings">setting</string>
+    <string name="main">main</string>
+    <string name="favorite">favorite</string>
+    <string name="search">search</string>
+    <string name="add">add</string>
+    <string name="back">back</string>
+    <string name="item1">item1</string>
+    <string name="item2">item2</string>
+    <string name="send">send</string>
+    <string name="photo">photo</string>
+    <string name="delete">delete</string>
 </resources>
